--- a/pinchTest/Base.lproj/Main.storyboard
+++ b/pinchTest/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pinchTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,57 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L94-xw-D1S">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qoh-Lz-6JV">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <animations/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="12189878_795334123925907_5606838147441336546_n" translatesAutoresizingMaskIntoConstraints="NO" id="XDR-bK-sKV">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <animations/>
+                                    </imageView>
+                                </subviews>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="XDR-bK-sKV" secondAttribute="bottom" id="5en-Ux-28T"/>
+                                    <constraint firstItem="XDR-bK-sKV" firstAttribute="leading" secondItem="L94-xw-D1S" secondAttribute="leading" id="8ZM-sO-B17"/>
+                                    <constraint firstItem="qoh-Lz-6JV" firstAttribute="bottom" secondItem="XDR-bK-sKV" secondAttribute="bottom" id="9n7-LV-vXO"/>
+                                    <constraint firstItem="qoh-Lz-6JV" firstAttribute="leading" secondItem="XDR-bK-sKV" secondAttribute="leading" id="HfW-us-rwq"/>
+                                    <constraint firstItem="XDR-bK-sKV" firstAttribute="top" secondItem="L94-xw-D1S" secondAttribute="top" id="Hk0-mn-aXv"/>
+                                    <constraint firstItem="XDR-bK-sKV" firstAttribute="centerX" secondItem="L94-xw-D1S" secondAttribute="centerX" id="PQq-XQ-JZx"/>
+                                    <constraint firstItem="XDR-bK-sKV" firstAttribute="centerY" secondItem="L94-xw-D1S" secondAttribute="centerY" id="cnc-0W-XYv"/>
+                                    <constraint firstItem="qoh-Lz-6JV" firstAttribute="trailing" secondItem="XDR-bK-sKV" secondAttribute="trailing" id="gxm-6j-A9k"/>
+                                    <constraint firstItem="qoh-Lz-6JV" firstAttribute="top" secondItem="XDR-bK-sKV" secondAttribute="top" id="hgi-Up-ev6"/>
+                                    <constraint firstAttribute="trailing" secondItem="XDR-bK-sKV" secondAttribute="trailing" id="pPc-CI-Ky2"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="RZY-Hn-lrv"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="L94-xw-D1S" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Fdf-4W-E9H"/>
+                            <constraint firstItem="L94-xw-D1S" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MaB-k4-AN9"/>
+                            <constraint firstItem="L94-xw-D1S" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="aIC-7P-QKe"/>
+                            <constraint firstAttribute="trailing" secondItem="L94-xw-D1S" secondAttribute="trailing" id="uAz-Qi-NGf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blurImage" destination="qoh-Lz-6JV" id="CYG-1H-ut4"/>
+                        <outlet property="scrollView" destination="L94-xw-D1S" id="Fgh-ld-9Rv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="49" y="139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="12189878_795334123925907_5606838147441336546_n" width="960" height="720"/>
+    </resources>
 </document>
